--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="floating">floating</string>
     <string name="todo">TODO</string>
     <string name="title_activity_maps">Map</string>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDUmh36pSDVJQwoDnX7NX12tfNgCy6KDts</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
     <string name="fab">fab</string>
 
 
